# encrypted-p2p-chat

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  dev.db  pyproject.toml
backend/app/: config.py  factory.py  main.py
backend/app/api/: auth.py  encryption.py  rooms.py  websocket.py
backend/app/core/: exception_handlers.py  exceptions.py  redis_manager.py  surreal_manager.py  websocket_manager.py
backend/app/core/encryption/: __init__.py  double_ratchet.py  x3dh_manager.py
backend/app/core/passkey/: __init__.py  passkey_manager.py
backend/app/models/: Base.py  Credential.py  IdentityKey.py  OneTimePrekey.py  RatchetState.py  SignedPrekey.py  SkippedMessageKey.py  User.py  __init__.py
backend/app/schemas/: auth.py  common.py  rooms.py  websocket.py
backend/app/services/: auth_service.py  message_service.py  prekey_service.py  websocket_service.py
backend/tests/: test_crypto.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: AuthScreen.tsx  ChatLayout.tsx
frontend/src/crypto/: crypto-service.ts  double-ratchet.ts  key-store.ts  primitives.ts  x3dh.ts
frontend/src/crypto/__tests__/: primitives.test.ts  x3dh.test.ts
frontend/src/stores/: index.ts
frontend/src/ws/: client.ts
nginx/: nginx.conf
