[project]
name = "e2e-chat-backend"
version = "1.0.0"
description = "End-to-end encrypted P2P chat backend using Signal Protocol + WebAuthn"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "orjson>=3.10.0",

    # Database
    "sqlmodel>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # SurrealDB
    "surrealdb>=0.4.0",

    # Redis
    "redis[hiredis]>=5.0.0",

    # Cryptography (Signal Protocol)
    "cryptography>=43.0.0",
    "PyNaCl>=1.5.0",

    # WebAuthn / Passkeys
    "webauthn>=2.2.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio[trio]>=4.6.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
